✨ Added multiple controllable drrones

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,7 @@
                 "-ldl",
                 "-lrt",
                 "-lX11",
+                "-lstdc++",
                 "-o",
                 "build/linux/main"
             ],
